name:                cochis
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lysxia/cochis#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2017 Li-yao Xia
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src/
  exposed-modules:
    Cochis
    Cochis.Parser
    Cochis.Printer
    Cochis.Types
    Cochis.Utils
  other-modules:
    Cochis.Parser.Patterns
  build-depends:
    containers,
    haskell-src-exts-simple,
    microlens,
    mtl,
    transformers,
    unbound-generics,
    base >= 4.9 && < 5
  default-language:    Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

executable test
  hs-source-dirs:   test
  main-is:          test.hs
  default-language: Haskell2010
  build-depends:
    base,
    cochis

source-repository head
  type:     git
  location: https://github.com/Lysxia/cochis
